drivers on laps page and fix brand badge alignment

--- a/Web/src/app/session/brand-badge/brand-badge.css
+++ b/Web/src/app/session/brand-badge/brand-badge.css
@@ -5,7 +5,10 @@
 	position: relative;
 	display: inline-block;
 	width: 2em;
-	/*line-height: 1em;*/
+}
+
+.brand.no-center {
+	background-position-x: 0%;
 }
 
 .brand:before {
